--- a/combos.html
+++ b/combos.html
@@ -84,7 +84,7 @@
                       <a class="nav-link " href="dance-music.html">Dance & Music</a>
                     </li>
                     <li class="nav-item active">
-                      <a class="nav-link " href="cards&gitfts.html">Cards & Gifts</a>
+                      <a class="nav-link " href="https://github.com/DharaVivek/22AAC14/blob/main/cards%26gitfts.html">Cards & Gifts</a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link " href="cards&gitfts.html">Combos</a>
