--- a/index.html
+++ b/index.html
@@ -19,17 +19,8 @@
         <div class="col-6 col-sm-6 col-md-6 col-lg-6">
             <a class="pelli-logo m-0" href="index.html"><img class="m-0 pt-2" src="./images/p-logo.png"></a>
         </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-6 login">
-          <!-- <a  href="#"></a> -->
-           <li class="nav-item dropdown list-unstyled">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                 <!--<img src="./images/pppp.png">-->
-			<i class='bx bx-user-circle'></i>
-                  <div class="dropdown-menu hide"  aria-labelledby="navbarDropdown" x-placement="bottom-end">
-				  <a class="nav-link " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-				  <a class="dropdown-item" id="drop-down" href="customer.html">sign as a Customer</a>
-				  <a class="dropdown-item" id="drop-down" href="vendor_signup.html">sign as a Vendor</a>
-                 
+        <div>
+                 <img src="images/wed1-removebg-preview.png" alt="" style="height: 60%;padding-top: 1%;padding-left: 100%;">
                 </div>
                   </a>
                  
