--- a/combos.html
+++ b/combos.html
@@ -81,7 +81,7 @@
                       <a class="nav-link " href="catering.html">Catering</a>
                     </li>
                     <li class="nav-item active">
-                      <a class="nav-link " href="dance-music.html">Dance & Music</a>
+                      <a class="nav-link " href="https://github.com/DharaVivek/22AAC14/blob/main/dance-music.html">Dance & Music</a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link " href="https://github.com/DharaVivek/22AAC14/blob/main/cards%26gitfts.html">Cards & Gifts</a>
